# orio

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
docs/: architecture.md
orio/: Cargo.toml
orio/benches/: buffer.rs  file.rs  segment.rs
orio/examples/: genome.rs
orio/src/: buffer.rs  buffered_wrappers.rs  byte_str.rs  element.rs  error.rs  lib.rs  new.rs  pattern.rs  pool.rs  segment.rs  std_io.rs  streams.rs  util.rs
orio/src/buffer/: options.rs  partial_utf8.rs  read.rs  write.rs
orio/src/byte_str/: conv.rs  decoding.rs  encoding.rs  hash.rs  iter.rs  parsing.rs
orio/src/error/: utf8.rs
orio/src/new/: element.rs  pool.rs  ring.rs  segment.rs
orio/src/new/pool/: hack.rs
orio/src/new/segment/: block_deque.rs  buffer.rs  ring.rs
orio/src/pattern/: internal.rs  matchers.rs
orio/src/pattern/matchers/: internal.rs  iter.rs
orio/src/pool/: hack.rs
orio/src/segment/: block_deque.rs  buffer.rs  memory.rs  ring.rs  seg_slice.rs  util.rs
orio/src/streams/: codec.rs  file.rs  hashing.rs  seeking.rs  std_io.rs  void.rs
orio/src/util/: partial_utf8.rs  utf8.rs
orio/tests/: bench.rs  buffer.rs  buffered_streams.rs  byte_str_hash.rs  common.rs  dataset.rs  file.rs  hash_streams.rs  pattern.rs  streams.rs
