[package]
name = "orio"
version = "0.1.0"
edition = "2021"
authors = ["Strixpyrr"]
description = "A memory-recycling IO library written in Rust."
keywords = ["io"]
license = "Apache-2.0"
homepage = "https://github.com/NightEule5/orio/"
repository = "https://github.com/NightEule5/orio/"

[features]
shared-pool = []

[dependencies]
amplify_derive = "2.11.3"
base16ct = { version = "0.2.0", features = ["std"] }
base64 = "0.21.0"
cfg-if = "1.0.0"
itertools = "0.10.5"
once_cell = "1.17.1"
simdutf8 = "0.1.4"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
