[package]
name = "orio"
version = "0.1.0"
edition = "2021"
authors = ["Strixpyrr"]
description = "A memory-recycling IO library written in Rust."
keywords = ["io"]
license = "Apache-2.0"
homepage = "https://github.com/NightEule5/orio/"
repository = "https://github.com/NightEule5/orio/"

[features]
default = ["secure-hash"]
shared-pool = []
hash = ["dep:digest"]
secure-hash = ["groestl", "sha2", "sha3", "shabal", "whirlpool"]
broken-hash = ["md5", "sha1"]
groestl = ["dep:groestl", "hash"]
md5 = ["dep:md-5", "hash"]
sha1 = ["dep:sha1", "hash"]
sha2 = ["dep:sha2", "hash"]
sha3 = ["dep:sha3", "hash"]
shabal = ["dep:shabal", "hash"]
whirlpool = ["dep:whirlpool", "hash"]

[dependencies]
amplify_derive = "2.11.3"
base16ct = { version = "0.2.0", features = ["std"] }
base64 = "0.21.0"
cfg-if = "1.0.0"
ctor = "0.2.0"
itertools = "0.10.5"
once_cell = "1.17.1"
simdutf8 = "0.1.4"
groestl = { version = "0.10.1", optional = true }
md-5 = { version = "0.10.5", optional = true }
sha1 = { version = "0.10.5", optional = true }
sha2 = { version = "0.10.6", optional = true }
sha3 = { version = "0.10.8", optional = true }
shabal = { version = "0.4.1", optional = true }
whirlpool = { version = "0.10.4", optional = true }
digest = { version = "0.10.6", optional = true, features = ["std"] }

[dev-dependencies]
base16ct = { version = "0.2.0", features = ["std"] }
bytes = "1.4.0"
ctor = "0.2.0"
fetch-data = "0.1.6"
pretty_assertions = "1.3.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
sha2 = "0.10.6"
zip = "0.6.5"
