[package]
name = "orio"
version = "0.1.0"
edition = "2021"
authors = ["Strixpyrr"]
description = "A memory-recycling IO library written in Rust."
keywords = ["io"]
license = "Apache-2.0"
homepage = "https://github.com/NightEule5/orio/"
repository = "https://github.com/NightEule5/orio/"

[features]
default = ["secure-hash"]
bytes = ["dep:bytes"]
shared-pool = []
hash = ["dep:digest"]
secure-hash = ["groestl", "sha2", "sha3", "shabal", "whirlpool"]
broken-hash = ["md5", "sha1"]
groestl = ["dep:groestl", "hash"]
md5 = ["dep:md-5", "hash"]
sha1 = ["dep:sha1", "hash"]
sha2 = ["dep:sha2", "hash"]
sha3 = ["dep:sha3", "hash"]
shabal = ["dep:shabal", "hash"]
whirlpool = ["dep:whirlpool", "hash"]

[dependencies]
base16ct = { version = "0.2.0", features = ["std"] }
base64 = "0.21.0"
cfg-if = "1.0.0"
ctor = "0.2.0"
itertools = "0.10.5"
once_cell = "1.17.1"
simdutf8 = "0.1.4"
groestl = { version = "0.10.1", optional = true }
md-5 = { version = "0.10.5", optional = true }
sha1 = { version = "0.10.5", optional = true }
sha2 = { version = "0.10.6", optional = true }
sha3 = { version = "0.10.8", optional = true }
shabal = { version = "0.4.1", optional = true }
whirlpool = { version = "0.10.4", optional = true }
digest = { version = "0.10.6", optional = true, features = ["std"] }
thiserror = "1.0.43"
bytemuck = { version = "1.13.1", features = ["min_const_generics"] }
bytes = { version = "1.4.0", optional = true }
amplify_derive = "4.0.0"
all_asserts = "2.3.1"
num-traits = { version = "0.2.17", features = ["i128"] }

[dev-dependencies]
bytes = "1.4.0"
ctor = "0.2.0"
paste = "1.0.14"
pretty_assertions = "1.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
